<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logologin"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo1"
        android:background="@color/fondo1"
        />

    <EditText
        android:id="@+id/usuariologin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/user"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:textColorHint="@color/black"
        />

    <EditText
        android:id="@+id/passlogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/pass"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/black"
        />

    <Button
        android:id="@+id/btniniciologin"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/loginbutton"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/fondo2"
        />

    <Button
        android:id="@+id/btnregistrologin"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:text="@string/regis"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/fondo2"
        />

</LinearLayout>