<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tienda"
    >

    <ImageView
        android:id="@+id/logotienda"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo1"
        android:background="@color/fondo1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:textSize="35sp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btnadultos"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/adulto"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/fondo2"
        />

    <Button
        android:id="@+id/btnninos"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/ninos"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/fondo2"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="269dp"
            android:layout_height="196dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.255"
            app:srcCompat="@drawable/camisetadulto" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="265dp"
            android:layout_height="197dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.994"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.257"
            app:srcCompat="@drawable/camisetanino" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>